--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 	<meta name="description" content="Автомобильный пылесос DC 12V – это удобный помощник для оптимальной и быстрой уборки в салоне автомобиля, особенно во время длительных поездок, на природе и в кемпинге.">
 
-	<link rel="shortcut icon" href="//goodmoons.ru/land_dc12v-1/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="http://goodmoons.ru/land_dc12v-1/favicon.png" type="image/x-icon">
 
-	<link rel="stylesheet" href="//static.topproducty.ru/land/css/reset.css">
-	<link rel="stylesheet" href="//static.topproducty.ru/land/fonts/Montserrat/Montserrat.css">
-	<link rel="stylesheet" href="//goodmoons.ru/land_dc12v-1/css/styles.css">
+	<link rel="stylesheet" href="http://static.topproducty.ru/land/css/reset.css">
+	<link rel="stylesheet" href="http://static.topproducty.ru/land/fonts/Montserrat/Montserrat.css">
+	<link rel="stylesheet" href="http://goodmoons.ru/land_dc12v-1/css/styles.css">
 
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="//goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
+			<a href="http://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
 			<div class="products_count">Осталось <b>8</b> пылесосов по акции</div>
 		</header>
 
@@ -124,7 +124,7 @@
 			<img class="image image2" src="http://goodmoons.ru/land_dc12v-1/images/description__image2.jpg" alt="High-Power Cleaner">
 			<p>С его помощью Вы без труда почистите автомобильные чехлы, обивку и другие поверхности. Входящие в комплект насадки уничтожат пыль в самых труднодоступных местах. А его компактные размеры сэкономят место в автомобиле.</p>
 			<img class="image image3" src="http://goodmoons.ru/land_dc12v-1/images/description__image3.jpg" alt="High-Power Cleaner">
-			<a href="//goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
+			<a href="http://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
 		</section>
 
 		<!-- /description -->
@@ -326,8 +326,8 @@
 
 		<footer class="footer_section">
 			<img src="http://topproducty.ru/lands-img/copy-b-320-7137.png" alt="High-Power Cleaner">
-			<a target="_blank" href="//goodmoons.ru/land_dc12v-1/?page=politics">Политика конфиденциальности</a><br>
-			<a target="_blank" href="//goodmoons.ru/land_dc12v-1/?page=agreement">Пользовательское соглашение</a>
+			<a target="_blank" href="http://goodmoons.ru/land_dc12v-1/?page=politics">Политика конфиденциальности</a><br>
+			<a target="_blank" href="http://goodmoons.ru/land_dc12v-1/?page=agreement">Пользовательское соглашение</a>
 		</footer>
 
 		<!-- /footer -->
@@ -344,7 +344,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="//static.topproducty.ru/fonts/roboto.css">
+<link rel="stylesheet" type="text/css" href="http://static.topproducty.ru/fonts/roboto.css">
 <script src="http://static.topproducty.ru/js/jquery.js" type="text/javascript"></script>
 <script src="http://static.topproducty.ru/js/plugins.js?v=1551371360" type="text/javascript"></script>
 
@@ -423,7 +423,7 @@ var vPlayer = null;
         
     });
 </script>
-<link href="//static.topproducty.ru/css/popup-m1-style.css?v=4" rel="stylesheet" type="text/css"/>
+<link href="http://static.topproducty.ru/css/popup-m1-style.css?v=4" rel="stylesheet" type="text/css"/>
 <script src="http://static.topproducty.ru/js/popup-m1.js?v=4" type="text/javascript"></script>
 
 <script type="text/javascript">
