--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 	<meta name="description" content="Автомобильный пылесос DC 12V – это удобный помощник для оптимальной и быстрой уборки в салоне автомобиля, особенно во время длительных поездок, на природе и в кемпинге.">
 
-	<link rel="shortcut icon" href="http://goodmoons.ru/land_dc12v-1/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://goodmoons.ru/land_dc12v-1/favicon.png" type="image/x-icon">
 
-	<link rel="stylesheet" href="http://static.topproducty.ru/land/css/reset.css">
-	<link rel="stylesheet" href="http://static.topproducty.ru/land/fonts/Montserrat/Montserrat.css">
-	<link rel="stylesheet" href="http://goodmoons.ru/land_dc12v-1/css/styles.css">
+	<link rel="stylesheet" href="https://static.topproducty.ru/land/css/reset.css">
+	<link rel="stylesheet" href="https://static.topproducty.ru/land/fonts/Montserrat/Montserrat.css">
+	<link rel="stylesheet" href="https://goodmoons.ru/land_dc12v-1/css/styles.css">
 
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -31,7 +31,7 @@
 			<div class="info_block">
 				<p class="subtitle">приятная уборка автомобиля</p>
 				<div class="discount"><b>53% скидка</b></div>
-				<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__image.jpg" alt="High-Power Cleaner">
+				<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__image.jpg" alt="High-Power Cleaner">
 			</div>
 			<div class="price_block">
 				<div class="price_item old">
@@ -45,15 +45,15 @@
 			</div>
 			<div class="benefits_block clearfix">
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit1_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit1_image.jpg" alt="High-Power Cleaner">
 					<p>Очищает любые поверхности</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit2_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit2_image.jpg" alt="High-Power Cleaner">
 					<p>Работает от прикуривателя</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit3_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit3_image.jpg" alt="High-Power Cleaner">
 					<p>Компактный и портативный</p>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="http://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
+			<a href="https://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
 			<div class="products_count">Осталось <b>8</b> пылесосов по акции</div>
 		</header>
 
@@ -94,23 +94,23 @@
 			<h2 class="title"><span>Преимущества</span> пылесоса</h2>
 			<div class="benefits_list2">
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/benefits2__benefit1_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/benefits2__benefit1_image.jpg" alt="High-Power Cleaner">
 					<p>Поможет вам поддерживать чистоту и порядок в салоне вашего автомобиля</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/benefits2__benefit2_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/benefits2__benefit2_image.jpg" alt="High-Power Cleaner">
 					<p>Шнур питания подходит ко всем стандартным автомобильным прикуривателям</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/benefits2__benefit3_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/benefits2__benefit3_image.jpg" alt="High-Power Cleaner">
 					<p>Он компактный и портативный, занимает очень мало места и легко чистится</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/benefits2__benefit4_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/benefits2__benefit4_image.jpg" alt="High-Power Cleaner">
 					<p>Пылесос имеет удобное крепление, разные насадки и съемный моющийся фильтр</p>
 				</div>
 			</div>
-			<img class="gif_image" src="http://goodmoons.ru/land_dc12v-1/images/gif_image.gif" alt="High-Power Cleaner">
+			<img class="gif_image" src="https://goodmoons.ru/land_dc12v-1/images/gif_image.gif" alt="High-Power Cleaner">
 		</section>
 
 		<!-- /benefits -->
@@ -119,12 +119,12 @@
 
 		<section class="description_section">
 			<h2 class="title"><span>Уборка станет</span> легкой и приятной!</h2>
-			<img class="image image1" src="http://goodmoons.ru/land_dc12v-1/images/description__image1.jpg" alt="High-Power Cleaner">
+			<img class="image image1" src="https://goodmoons.ru/land_dc12v-1/images/description__image1.jpg" alt="High-Power Cleaner">
 			<p>Автомобильный пылесос DC 12V – это удобный помощник для оптимальной и быстрой уборки в салоне автомобиля, особенно во время длительных поездок, на природе и в кемпинге.</p>
-			<img class="image image2" src="http://goodmoons.ru/land_dc12v-1/images/description__image2.jpg" alt="High-Power Cleaner">
+			<img class="image image2" src="https://goodmoons.ru/land_dc12v-1/images/description__image2.jpg" alt="High-Power Cleaner">
 			<p>С его помощью Вы без труда почистите автомобильные чехлы, обивку и другие поверхности. Входящие в комплект насадки уничтожат пыль в самых труднодоступных местах. А его компактные размеры сэкономят место в автомобиле.</p>
-			<img class="image image3" src="http://goodmoons.ru/land_dc12v-1/images/description__image3.jpg" alt="High-Power Cleaner">
-			<a href="http://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
+			<img class="image image3" src="https://goodmoons.ru/land_dc12v-1/images/description__image3.jpg" alt="High-Power Cleaner">
+			<a href="https://goodmoons.ru/land_dc12v-1/#order_form" class="button">Оформить заказ</a>
 		</section>
 
 		<!-- /description -->
@@ -133,7 +133,7 @@
 
 		<section class="characteristics_section">
 			<h2 class="title"><span>Характеристики</span> пылесоса</h2>
-			<img class="image" src="http://goodmoons.ru/land_dc12v-1/images/characteristics__image.jpg" alt="High-Power Cleaner">
+			<img class="image" src="https://goodmoons.ru/land_dc12v-1/images/characteristics__image.jpg" alt="High-Power Cleaner">
 			<ul class="characteristics__list">
 				<li><b>Напряжение:</b> 12 В</li>
 				<li><b>Мощность:</b> 60 Вт</li>
@@ -151,7 +151,7 @@
 
 		<section class="use_section">
 			<h2 class="title"><span>Как пользоваться</span> пылесосом?</h2>
-			<img src="http://goodmoons.ru/land_dc12v-1/images/use__image.jpg" alt="High-Power Cleaner">
+			<img src="https://goodmoons.ru/land_dc12v-1/images/use__image.jpg" alt="High-Power Cleaner">
 			<ul class="list2 marker1">
 				<li>Извлеките пылесос из упаковки и выберите нужную насадку</li>
 				<li>Подключите шнур питания пылесоса к прикуривателю</li>
@@ -169,7 +169,7 @@
 			<div class="reviews_list">
 				<div class="review_item">
 					<div class="author_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews__review1_avatar.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews__review1_avatar.jpg" alt="High-Power Cleaner">
 						<div class="author_info">
 							<div class="name">Кирилл С.</div>
 							<div class="text">41 год</div>
@@ -181,14 +181,14 @@
 					</div>
 					<p>Компактный, легкий и удобный пылесосик) Достает всё что угодно и отовсюду, куда бы не попытался залезть. Есть дополнительная вторая насадка у него для труднодоступных мест и щелей, что очень выручает. Думал, что длины шнура не будет хватать, но для стандартного “не лимузина” - за глаза. Пользоваться очень просто, воткнул в прикуриватель и пошел) Вещь незаменимая!</p>
 					<div class="images_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo1.jpg" alt="High-Power Cleaner">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo2.jpg" alt="High-Power Cleaner">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo3.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo1.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo2.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review1_photo3.jpg" alt="High-Power Cleaner">
 					</div>
 				</div>
 				<div class="review_item">
 					<div class="author_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews__review2_avatar.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews__review2_avatar.jpg" alt="High-Power Cleaner">
 						<div class="author_info">
 							<div class="name">Кристина К.</div>
 							<div class="text">30 лет</div>
@@ -200,13 +200,13 @@
 					</div>
 					<p>Взяла себе недавно такого мелкого помощника в машину, питание от прикуривателя дает возможность использовать его когда мне захочется, места много он не занимает и его легко чистить от мусора, при этом всё за адекватную цену. Салон теперь всегда чистый и комфортный, а места много он не съедает!) Тяги хватает, довольно мощный. В общем, рекомендую!</p>
 					<div class="images_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review2_photo1.jpg" alt="High-Power Cleaner">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review2_photo2.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review2_photo1.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review2_photo2.jpg" alt="High-Power Cleaner">
 					</div>
 				</div>
 				<div class="review_item">
 					<div class="author_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews__review3_avatar.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews__review3_avatar.jpg" alt="High-Power Cleaner">
 						<div class="author_info">
 							<div class="name">Евгений Ф.</div>
 							<div class="text">26 лет</div>
@@ -218,9 +218,9 @@
 					</div>
 					<p>Приобретал где-то пол года назад по совету друга, у которого уже был такой. В целом меня результат очень порадовал, пылесос довольно мощный и удобный. Собирает пыль и грязь, да еще и из самых укромных мест. В руке держать удобно, он компактный, не занимает много места. Вывод? Думаю это очень выгодная покупка для владельцев авто, которые хотят поддерживать чистоту.</p>
 					<div class="images_block clearfix">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo1.jpg" alt="High-Power Cleaner">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo2.jpg" alt="High-Power Cleaner">
-						<img src="http://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo3.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo1.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo2.jpg" alt="High-Power Cleaner">
+						<img src="https://goodmoons.ru/land_dc12v-1/images/reviews3__review3_photo3.jpg" alt="High-Power Cleaner">
 					</div>
 				</div>
 			</div>
@@ -234,25 +234,25 @@
 			<h2 class="title"><span>Как сделать</span> заказ?</h2>
 			<div class="order_steps2 clearfix">
 				<div class="step_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/order_steps__step1_icon.png" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/order_steps__step1_icon.png" alt="High-Power Cleaner">
 					<div class="separator"></div>
 					<h4>Заявка</h4>
 					<p>Оставляете заявку на сайте</p>
 				</div>
 				<div class="step_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/order_steps__step2_icon.png" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/order_steps__step2_icon.png" alt="High-Power Cleaner">
 					<div class="separator"></div>
 					<h4>Звонок</h4>
 					<p>Наш менеджер уточняет детали заказа</p>
 				</div>
 				<div class="step_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/order_steps__step3_icon.png" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/order_steps__step3_icon.png" alt="High-Power Cleaner">
 					<div class="separator"></div>
 					<h4>Отправка</h4>
 					<p>Доставляем ваш товар в течение<br>1-10 дней</p>
 				</div>
 				<div class="step_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/order_steps__step4_icon.png" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/order_steps__step4_icon.png" alt="High-Power Cleaner">
 					<div class="separator"></div>
 					<h4>Получение</h4>
 					<p>Оплачиваете при получении на почте</p>
@@ -269,7 +269,7 @@
 			<div class="info_block">
 				<p class="subtitle">приятная уборка автомобиля</p>
 				<div class="discount"><b>53% скидка</b></div>
-				<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__image.jpg" alt="High-Power Cleaner">
+				<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__image.jpg" alt="High-Power Cleaner">
 			</div>
 			<div class="price_block clearfix">
 				<div class="price_item old">
@@ -283,15 +283,15 @@
 			</div>
 			<div class="benefits_block clearfix">
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit1_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit1_image.jpg" alt="High-Power Cleaner">
 					<p>Очищает любые поверхности</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit2_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit2_image.jpg" alt="High-Power Cleaner">
 					<p>Работает от прикуривателя</p>
 				</div>
 				<div class="benefit_item">
-					<img src="http://goodmoons.ru/land_dc12v-1/images/offer3__benefit3_image.jpg" alt="High-Power Cleaner">
+					<img src="https://goodmoons.ru/land_dc12v-1/images/offer3__benefit3_image.jpg" alt="High-Power Cleaner">
 					<p>Компактный и портативный</p>
 				</div>
 			</div>
@@ -325,9 +325,9 @@
 		<!-- footer -->
 
 		<footer class="footer_section">
-			<img src="http://topproducty.ru/lands-img/copy-b-320-7137.png" alt="High-Power Cleaner">
-			<a target="_blank" href="http://goodmoons.ru/land_dc12v-1/?page=politics">Политика конфиденциальности</a><br>
-			<a target="_blank" href="http://goodmoons.ru/land_dc12v-1/?page=agreement">Пользовательское соглашение</a>
+			<img src="https://topproducty.ru/lands-img/copy-b-320-7137.png" alt="High-Power Cleaner">
+			<a target="_blank" href="https://goodmoons.ru/land_dc12v-1/?page=politics">Политика конфиденциальности</a><br>
+			<a target="_blank" href="https://goodmoons.ru/land_dc12v-1/?page=agreement">Пользовательское соглашение</a>
 		</footer>
 
 		<!-- /footer -->
@@ -344,11 +344,11 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="http://static.topproducty.ru/fonts/roboto.css">
-<script src="http://static.topproducty.ru/js/jquery.js" type="text/javascript"></script>
-<script src="http://static.topproducty.ru/js/plugins.js?v=1551371360" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="https://static.topproducty.ru/fonts/roboto.css">
+<script src="https://static.topproducty.ru/js/jquery.js" type="text/javascript"></script>
+<script src="https://static.topproducty.ru/js/plugins.js?v=1551371360" type="text/javascript"></script>
 
-<script src="http://static.topproducty.ru/js/detect.js" type="text/javascript"></script>
+<script src="https://static.topproducty.ru/js/detect.js" type="text/javascript"></script>
 
 
 
@@ -374,7 +374,7 @@ var vPlayer = null;
                 getFormData();
                 $.ajax({
                   type: 'POST',
-                  url: 'http://79.171.117.10/send_stat_order/',
+                  url: 'https://79.171.117.10/send_stat_order/',
                   data: {
                     name: name,
                     phone: phone,
@@ -397,7 +397,7 @@ var vPlayer = null;
             if(keyVal.length > 0){
                 $.ajax({
                     type: 'POST',
-                    url: 'http://79.171.117.10/send_stat_order/',
+                    url: 'https://79.171.117.10/send_stat_order/',
                     data: { 
                         del: 1, 
                         keyVal: keyVal
@@ -423,8 +423,8 @@ var vPlayer = null;
         
     });
 </script>
-<link href="http://static.topproducty.ru/css/popup-m1-style.css?v=4" rel="stylesheet" type="text/css"/>
-<script src="http://static.topproducty.ru/js/popup-m1.js?v=4" type="text/javascript"></script>
+<link href="https://static.topproducty.ru/css/popup-m1-style.css?v=4" rel="stylesheet" type="text/css"/>
+<script src="https://static.topproducty.ru/js/popup-m1.js?v=4" type="text/javascript"></script>
 
 <script type="text/javascript">
 $(function(){
@@ -438,8 +438,8 @@ $(function(){
 	M1.validateAndSendForm(false, M1Text);
 });
 </script>
-	<script src="http://static.topproducty.ru/land/js/youtube/previewYouTube.js"></script>
-	<script src="http://goodmoons.ru/land_dc12v-1/js/scripts.js"></script>
+	<script src="https://static.topproducty.ru/land/js/youtube/previewYouTube.js"></script>
+	<script src="https://goodmoons.ru/land_dc12v-1/js/scripts.js"></script>
 	
 	<!-- /scripts -->
 
